<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagenLogotipo"
        android:layout_width="503dp"
        android:layout_height="226dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/logoo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagenBuscador"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/icono_buscar"
        app:layout_constraintBottom_toTopOf="@+id/listaProductos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagenLogotipo"
        app:layout_constraintVertical_bias="0.0" />

    <SearchView
        android:id="@+id/buscador"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/busca"
        app:layout_constraintBottom_toTopOf="@+id/listaProductos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imagenBuscador"
        app:layout_constraintTop_toBottomOf="@id/imagenLogotipo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaProductos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/barraInferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buscador" />

    <LinearLayout
        android:id="@+id/barraInferior"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/barra_inferior">

        <ImageButton
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/home"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/cesta"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/cesta"
            android:scaleType="centerInside"
            android:src="@drawable/ic_cesta" />

        <ImageButton
            android:id="@+id/favorito"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/favoritos"
            android:scaleType="centerInside"
            android:src="@drawable/ic_favorito" />

        <ImageButton
            android:id="@+id/usuario"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/usuario"
            android:scaleType="centerInside"
            android:src="@drawable/ic_usuario" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/barraSuperior"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/menu"
            android:src="@mipmap/icono_menu_foreground" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnInsta"
            android:layout_width="42dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/circle_background"
            android:scaleType="centerInside"
            android:src="@drawable/icono_instagram" />

        <ImageButton
            android:id="@+id/btnLlamada"
            android:layout_width="42dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/circle_background"
            android:scaleType="centerInside"
            android:src="@drawable/icono_llamada" />

        <ImageButton
            android:id="@+id/btnMensaje"
            android:layout_width="42dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/circle_background"
            android:scaleType="centerInside"
            android:src="@drawable/icono_mensaje" />

        <Switch
            android:id="@+id/switchModo"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:scaleX="1.4"
            android:scaleY="1.4"
            android:textOff="@string/modo_claro"
            android:textOn="@string/modo_oscuro"
            android:thumbTint="@color/md_theme_primary"
            android:trackTint="@color/md_theme_secondaryContainer" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
