<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/fotoProducto"
                android:layout_width="125dp"
                android:layout_height="137dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/fotoProducto"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fotoProducto"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/nombreProducto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/nombreProducto"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/descripcionProducto"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/descripcionProducto"
                    android:textAlignment="viewStart"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nombreProducto" />

                <TextView
                    android:id="@+id/precioProducto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/precioProducto"
                    android:textColor="@color/md_theme_error"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/descripcionProducto" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/precioProducto"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAñadir"
                        android:layout_width="155dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/añadirCesta"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@id/botonFavorito"
                        tools:layout_editor_absoluteY="-1dp" />

                    <ImageButton
                        android:id="@+id/botonFavorito"
                        android:layout_width="37dp"
                        android:layout_height="35dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="Añadir a favoritos"
                        android:src="@drawable/icono_no_favorito"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
